# krec

./: .gitignore  Cargo.toml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
adhoc/web/: serve.py
examples/: generate_synthetic_krec.py  krec_to_rrd.py  test_extract.py  test_krec_read.py  test_krec_save.py
kclip/: requirements.txt
krec/: requirements-dev.txt
krec-rs/python/: Cargo.toml
krec-rs/python/src/: lib.rs
krec-rs/src/: ffmpeg.rs
krec-ts/: package.json  tsconfig.json
krec-ts/src/: example.ts  krec.ts
krec/bindings/: Cargo.toml
krec/bindings/src/: lib.rs
proto/: krec.proto
python/: Cargo.toml  pyproject.toml
python/krec/bindings/: Cargo.toml
python/src/: lib.rs
src/: ffmpeg.rs  krec.rs
tests/: test_serialization.py
web/: full_meta.html
