[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "bindings"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = ">= 0.21", features = ["extension-module"] }
pyo3-stub-gen = ">= 0.6"
tracing = "0.1"

# Workspace packages.
krec = { version = "0.1.0", path = "../../.." }
